SUBDIRS = man sample

DEVEL_DOCS =    CodingStyle \
		README.libsms

EXTRA_DIST = 	README \
		README-2110 \
		README-3810 \
		README-6110 \
		README-6510 \
		README-7110 \
		README-DKU2 \
		README-MacOSX \
		README-PCSC \
		README-WIN32 \
		README-dancall \
		README-ericsson \
		README-siemens \
		README-Symbian \
		CREDITS \
		Bugs \
		DataCalls-QuickStart \
		FAQ \
		KNOWN_BUGS \
		gnokii.nol \
		gnokii-ir-howto \
		gnokii-IrDA-Linux \
		ringtones.txt \
		logos.txt \
		$(DEVEL_DOCS)

		sample/gnokiirc \
		sample/magic \
		sample/logo/pacman.xpm \
		sample/logo/gnokii.xpm \
		sample/logo/gnokiiop.xpm \
		sample/logo/horse.xpm \
		sample/logo/bronto.xpm \
		sample/logo/horse2.xpm \
		sample/ringtone/star.imelody \
		sample/ringtone/star.rtttl \
		sample/vCalendar/test.vcs \
		sample/ppp/cimd-connect \
		sample/ppp/ppp-FILES \
		sample/ppp/options \
		sample/ppp/pap-secrets \
		sample/ppp/ppp-hscsd \
		sample/ppp/ppp-6210-modem \
		sample/ppp/ppp-gnokii \
		sample/ppp/ppp-on

GNOKII1_MAN=man/gnokii.1 man/sendsms.1
GNOKII8_MAN=man/gnokiid.8 man/mgnokiidev.8
XGNOKII_MAN=man/xgnokii.1x



