SUBDIRS = man sample protocol

docsdir = $(datadir)/doc/gnokii

DEVEL_DOCS =    CodingStyle \
		README.libsms

docs_DATA = 	README \
		README-2110 \
		README-3810 \
		README-6110 \
		README-6510 \
		README-7110 \
		README-DKU2 \
		README-MacOSX \
		README-PCSC \
		README-WINDOWS \
		README-dancall \
		README-ericsson \
		README-siemens \
		README-Symbian \
		CREDITS \
		Bugs \
		DataCalls-QuickStart \
		FAQ \
		KNOWN_BUGS \
		gettext-howto \
		gnokii.nol \
		gnokii-hackers-howto \
		gnokii-ir-howto \
		gnokii-IrDA-Linux \
		ringtones.txt \
		logos.txt \
		$(DEVEL_DOCS)

EXTRA_DIST = $(docs_DATA)
