SUBDIRS = data devices gnokii links phones

gnokiidir = $(includedir)
gnokii_HEADERS = gnokii.h

EXTRA_HEADERS =				\
		 cfgreader.h		\
		 compat.h		\
		 config.h		\
		 device.h		\
		 gnokii.h		\
		 gnokii-internal.h	\
		 gsm-filetypes.h	\
		 misc.h			\
		 nokia-decoding.h	\
		 pkt.h			\
		 sms-nokia.h		\
		 localcharset.h		\
		 map.h

CLEANFILES = gnokii.h

EXTRA_DIST = gnokii.h.in $(EXTRA_HEADERS)
