EXTRA_DIST =					\
	kernel_2.4/Makefile.in			\
	kernel_2.4/configure.in			\
	kernel_2.4/nokia_dku2.c			\
	kernel_2.4/nokia_dku2.h			\
	kernel_2.6/nokia_dku2.c.2_6_15		\
	kernel_2.6/Makefile.in			\
	kernel_2.6/configure.in			\
	kernel_2.6/nokia_dku2.c			\
	kernel_2.6/nokia_dku2.h			\
	freebsd-ltmain_sh.patch
